--- a/src/css/Errorpage.css
+++ b/src/css/Errorpage.css
@@ -31,4 +31,37 @@
   line-height: 142.6%; /* 25.668px */
   text-decoration-line: underline;
   color: #FF6060;
+}
+
+@media screen and (max-width: 768px) {
+  .ErrorpageFlexbox {
+    gap: 100px;
+  }
+  .ErrorpageFlexbox__404 {
+    color: #FF6060;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 96px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 142.6%; /* 136.896px */
+  }
+  .ErrorpageFlexbox__Oups {
+    color: #FF6060;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 142.6%; /* 25.668px */
+  }
+  .ErrorpageFlexbox__Back {
+    color: #FF6060;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 142.6%; /* 19.964px */
+    text-decoration-line: underline;
+  }
 }/*# sourceMappingURL=Errorpage.css.map */
