--- a/src/css/Errorpage.scss
+++ b/src/css/Errorpage.scss
@@ -32,3 +32,37 @@
         color: #FF6060;
     }
 }
+
+
+@media screen and (max-width: 768px){
+    .ErrorpageFlexbox{
+        gap : 100px;
+        &__404{
+            color: #FF6060;
+            text-align: center;
+            font-family: Montserrat;
+            font-size: 96px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 142.6%; /* 136.896px */
+        }
+        &__Oups{
+            color: #FF6060;
+            text-align: center;
+            font-family: Montserrat;
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 142.6%; /* 25.668px */
+        }
+        &__Back{
+            color: #FF6060;
+            font-family: Montserrat;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 142.6%; /* 19.964px */
+            text-decoration-line: underline;
+        }
+    }
+  }
