--- a/src/css/Appartements.scss
+++ b/src/css/Appartements.scss
@@ -191,6 +191,7 @@
           position : absolute;
           right : 20px;
           top : 10px;
+          transition: transform 0.3s ease;
           }
       &--title{
           padding-left : 10px;
@@ -230,7 +231,13 @@
   max-height: 0;
   overflow: hidden;
   transition: max-height 1s ease; 
+  margin-bottom: 40px;
 }
+
+.AppartementCollapse__titlecontainer--arrow.open {
+  transform: rotate(180deg);
+}
+
 
 .AppartementCollapse__textcontainer.open {
   max-height: 200px; 
