--- a/src/SCSS/Navbar.scss
+++ b/src/SCSS/Navbar.scss
@@ -16,6 +16,9 @@
         display : flex;
         gap : 50px;
         & a{
+            &.active{
+                text-decoration: underline;
+            }
             text-decoration: none;
             color : #FF6060;
             &:hover{
@@ -24,6 +27,8 @@
         }
     }
 }
+
+
 
 @media screen and (max-width: 768px) {
     .navbar{
